--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: uv sync --frozen --group lint
+        run: uv sync --frozen --group dev
 
       - name: Run Ruff linter
         run: uv run ruff check .
@@ -47,12 +47,12 @@ jobs:
           python-version: "3.10"
 
       - name: Install dependencies
-        run: uv sync --all-groups
+        run: uv sync --frozen --all-groups
 
       - name: Run pytest
         env:
           PYTEST_ADDOPTS: "--color=yes"
-        run: uv run pytest tests/ -v --cov=src --cov-report=xml --cov-report=term
+        run: uv run pytest test/ -v --cov=src --cov-report=xml --cov-report=term
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
